# data-analysis-use-case-crewai

./: .env  diagram.tldr  pyproject.toml  support_report.md
config/: tasks.yaml
src/data_analysis_use_case_crewai/: __init__.py  charts.py
