[project]
name = "data-analysis-use-case-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syed Safdar Ali Shah", email = "programmersafdar@live.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.105.0",
    "crewai-tools>=0.37.0",
]

[project.scripts]
data-analysis-use-case-crewai = "data_analysis_use_case_crewai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
